@@ -1,4 +1,6 @@
 
+  - (Issue 39) Static logging method for object oriented API
+
 2008-10-01 - Release Version: 0.2.b.1
 
   - Added support for error and exception handling
